; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/common/extr_bspfile.c_ParseEntities.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/common/extr_bspfile.c_ParseEntities.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@num_entities = common dso_local global i64 0, align 8
@dentdata = common dso_local global i32 0, align 4
@entdatasize = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ParseEntities() #0 {
  store i64 0, i64* @num_entities, align 8
  %1 = load i32, i32* @dentdata, align 4
  %2 = load i32, i32* @entdatasize, align 4
  %3 = call i32 @ParseFromMemory(i32 %1, i32 %2)
  br label %4

4:                                                ; preds = %7, %0
  %5 = call i64 (...) @ParseEntity()
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %4
  br label %4

8:                                                ; preds = %4
  ret void
}

declare dso_local i32 @ParseFromMemory(i32, i32) #1

declare dso_local i64 @ParseEntity(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
